# xfruncat2

./: .gitignore  LICENSE  README.md  meson.build  xfruncat.desktop
src/: xfruncat.c
